2004-10-08  Nate Nielsen <nielsen@memberwebs.com>
	
	* plugins/nautilus/seahorse-pgp-preferences.desktop.in: Fixed icon 
	(bug# 132687)
	* libseahorse/seahorse-context.c: Fixed crasher when eel gconf returns 
	a null value (see comments on bug# 147076)
	* libseahorse/seahorse-op.c: Fixed crasher when the clipboard sends
	us null text (bug# 114459)
	
2004-10-06  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-recipients.c: Fixed crasher bugs which occur after
	encrypting a file (bug# 154747)
	* libseahorse/seahorse-check-button-control.c:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-default-key-control.c:
	* libseahorse/seahorse-key.h:
	* libseahorse/seahorse-key-pair.h:
	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-widget.c:
	* libseahorse/seahorse-widget.h:
	* plugins/nautilus/seahorse-pgp-preferences.c:
	* src/main.c:
	* src/seahorse-delete.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-generate-select.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-key-widget.h:
	* src/seahorse-preferences.c: Fixed (most all) warnings 
	
2004-10-05  Nate Nielsen <nielsen@memberwebs.com>
	
	* configure.in: add --enable-debug option
	
2004-10-05  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-context.c: Fixed seahorse_context_get_key which
	would always return NULL (bug# 154206)
	* libseahorse/seahorse-signatures.c: Cleaned up signature code 
	* libseahorse/seahorse-libdialogs.h:
	* libseahorse/seahorse-signatures.c: 
	* src/main.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-windows.h: Better exiting of the process. Previously 
	in some cases seahorse would keep running hidden.
	
2004-10-05	Amanpreet Singh Alam <amanpreetalam@yahoo.com>

	*configure.in: Punjabi(pa) is add to ALL_LINGUAS

2004-10-04  Nate Nielsen <nielsen@memberwebs.com>
	