@@ -1,5 +1,8 @@
 2004-10-08  Nate Nielsen <nielsen@memberwebs.com>
 	
+	* libseahorse/seahorse-context.c: 
+	* libseahorse/seahorse-recipients.c:
+	* src/main.c: Use of ngettext (bug# 123850)
 	* plugins/nautilus/seahorse-pgp-preferences.desktop.in: Fixed icon 
 	(bug# 132687)
 	* libseahorse/seahorse-context.c: Fixed crasher when eel gconf returns 
